--- a/confirmation.html
+++ b/confirmation.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <div id="confirmationPage" class="confirmation-container">
-        <img src="images/email-icon.png" class="email-icon" alt="Email Icon">
+        <img src="images/email-icons.png" class="email-icon" alt="Email Icon">
         <h2>Your itinerary has been sent to your personal planner! 💌💖</h2>
         <p>Your personal planner will endeavour to bring you the most magical Valentine's Day (& After)! 🥰✨</p>
         <p id="confirmationMessage"></p>      
