--- a/confirmation.html
+++ b/confirmation.html
@@ -14,7 +14,7 @@
         <p id="confirmationMessage"></p> 
 
         </div>
-        <button class="home-btn" id="home-btn"> Reselect / Reject 🔙</button>
+        <button class="home-btn" id="home-btn"> Reselect / Go back 🔙</button>
         </div>
     
     </div>
