--- a/confirmation.html
+++ b/confirmation.html
@@ -48,7 +48,7 @@
             if (homeBtn) {
             homeBtn.addEventListener("click", function () {
                 alert("Going back to invitation page 💌");
-                window.location.href = "https://www.hazeflower.github.io/execute-plan-v/";
+                window.location.href = "index.html";
                 });
             }
         });
