--- a/confirmation.html
+++ b/confirmation.html
@@ -8,14 +8,18 @@
 </head>
 <body>
     <div id="confirmationPage" class="confirmation-box">
+    <section class="confirmation-section">
         <img src="images/email-iconss.png" class="email-icon" alt="Email Icon">
         <h2>Your itinerary has been sent to your personal planner! 💌💖</h2>
+    </section>
+    <section class="confirmation-section">
         <p>Your personal planner will endeavour to bring you the most magical Valentine's Day (& After)! 🥰✨</p>
-        <p id="confirmationMessage"></p> 
-        
+        <p id="confirmationMessage"></p>
+    </section>
+    <section class="confirmation-section">
         <button class="home-btn" id="home-btn"> Reselect / Go back 🔙</button>
-        
-    </div>
+    </section>
+</div>
 
     <script>
         document.addEventListener("DOMContentLoaded", function () {
