--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         <main>
             <section class="message">
                 <h2>Haerimahh, My Dear Vampire Baby 💖</h2>
-                <p>Will you be my Valentine? 🥺 <br> Let’s make our 100th (&101st) day unforgettable!</p>
+                <p>Will you be my Valentine? 🥺 <br> Let’s make our 100th day (& Weekend) unforgettable!</p>
             </section>
 
             <section class="date-details">
@@ -26,7 +26,7 @@
             </section>
 
             <section class="date-details">
-                     <h3>Saturday 15th itinerary:</h3>
+                     <h3>15th/16th Weekend itinerary:</h3>
                     <p>❔ Press Accept and we can plan it out 😉 </p>
             </section>
 
@@ -36,7 +36,7 @@
 
         <!-- Footer on First Page -->
         <footer class="footer">
-            <p>Created with love by your third fav Korean 🥰 <br> Ft. JavaScript, HTML & CSS 😚</p>
+            <p>Created with love by your third fav Korean 🥰 <br> Ft. A bit of coding & A lot of time thinking about you 😚</p>
         </footer>
     </div> <!-- End of Invitation Page -->
 
@@ -45,18 +45,60 @@
 
          <!-- Centered White Section Box -->
         <div class="white-box">
-        <h1>Choose Your Valentine's Day Itinerary</h1>
+        <h1>Choose Your Valentine's Weekend Itinerary</h1>
             <div class="content-wrapper">
                 <!-- Left Side: Itinerary Selection -->
                 <div class="itinerary-section">
                     <div class="itinerary-category">
                         <h2 class="category-title">Food & Dining</h2>
                         <div class="itinerary-grid">
-                            <label class="itinerary-item" data-place="Gaucho Tower Bridge, London">
-                                <input type="checkbox" name="activity" value="Romantic Dinner" hidden>
-                                <img src="images/Romantic Dinner.jpg" alt="Romantic Dinner" class="activity-img">
+                            <label class="itinerary-item" data-place="Milk Beach Soho, London">
+                                <input type="checkbox" name="activity" value="Aussie Brunch" hidden>
+                                <img src="images/milkbeach.jpeg" alt="Aussie Brunch" class="activity-img">
                                 <div class="tick">✔</div>
-                                <span>Romantic Dinner 🍽️</span>
+                                <span>Aussie Brunch 🪸</span>
+                            </label>
+                            
+                            <label class="itinerary-item" data-place="Lady Dinah's Cat Emporium, London">
+                                <input type="checkbox" name="activity" value="Cat Cafe" hidden>
+                                <img src="images/catcafe.jpeg" alt="Cat Cafe" class="activity-img">
+                                <div class="tick">✔</div>
+                                <span>Cat Cafe 😺</span>
+                            </label>
+
+                            <label class="itinerary-item" data-place="LIU Xiaomian Marylebone, London">
+                                <input type="checkbox" name="activity" value="Spicy Noodles" hidden>
+                                <img src="images/liuxiaomian.jpeg" alt="Spicy Noodles" class="activity-img">
+                                <div class="tick">✔</div>
+                                <span>"Spicy" Noodles 🔥</span>
+                            </label>
+
+                            <label class="itinerary-item" data-place="K. Minamoto Piccadilly shop, London">
+                                <input type="checkbox" name="activity" value="Wagashi" hidden>
+                                <img src="images/minamoto.jpeg" alt="Wagashi" class="activity-img">
+                                <div class="tick">✔</div>
+                                <span>Wagashi 🍘</span>
+                            </label>
+
+                            <label class="itinerary-item" data-place="Greedy Cow Bakes, London">
+                                <input type="checkbox" name="activity" value="Cream Doughnuts" hidden>
+                                <img src="images/greedycow.jpeg" alt="Cream Doughnuts" class="activity-img">
+                                <div class="tick">✔</div>
+                                <span>Cream Doughnuts 🍩</span>
+                            </label>
+
+                            <label class="itinerary-item" data-place="Gamnamuzip, London">
+                                <input type="checkbox" name="activity" value="Grandma's K-Cuisine" hidden>
+                                <img src="images/gamnamuzip.jpeg" alt="Grandma's K-Cuisine" class="activity-img">
+                                <div class="tick">✔</div>
+                                <span>Grandma's K-Cuisine 👵</span>
+                            </label>
+
+                            <label class="itinerary-item" data-place="Olle Korean Barbecue, London">
+                                <input type="checkbox" name="activity" value="BTS's OG KBBQ" hidden>
+                                <img src="images/olle.jpeg" alt="BTS's OG KBBQ" class="activity-img">
+                                <div class="tick">✔</div>
+                                <span>BTS's OG KBBQ 👦🏻</span>
                             </label>
                         </div>
                     </div>
@@ -64,11 +106,11 @@
                     <div class="itinerary-category">
                         <h2 class="category-title">Activities</h2>
                         <div class="itinerary-grid">
-                            <label class="itinerary-item" data-place="London Eye, London">
-                                <input type="checkbox" name="activity" value="Beach Walk" hidden>
-                                <img src="images/Beach Walk.jpg" alt="Beach Walk" class="activity-img">
+                            <label class="itinerary-item" data-place="Rooftop Saunas Hackney, London">
+                                <input type="checkbox" name="activity" value="Rooftop Sauna" hidden>
+                                <img src="images/Rooftopsauna.jpeg" alt="Rooftop Sauna" class="activity-img">
                                 <div class="tick">✔</div>
-                                <span>Beach Walk 🌊</span>
+                                <span>Rooftop Sauna ♨️</span>
                             </label>
 
                             <label class="itinerary-item" data-place="THE CUBE Canary Wharf, London">
@@ -77,24 +119,59 @@
                                 <div class="tick">✔</div>
                                 <span>The Cube 🎲 </span>
                             </label>
+
+                            <label class="itinerary-item" data-place="The O2, London">
+                                <input type="checkbox" name="activity" value="Activate O2" hidden>
+                                <img src="images/activateo2.jpg" alt="Activate O2" class="activity-img">
+                                <div class="tick">✔</div>
+                                <span>Activate O2 🕹️ </span>
+                            </label>
+
+                            <label class="itinerary-item" data-place="BattleKart London Saint Albans, London">
+                                <input type="checkbox" name="activity" value="Go-Cart" hidden>
+                                <img src="images/battlekart.jpeg" alt="Go-Cart" class="activity-img">
+                                <div class="tick">✔</div>
+                                <span>Go-Cart 🏎️ </span>
+                            </label>
+
+                            <label class="itinerary-item" data-place="Crazy Boules, London">
+                                <input type="checkbox" name="activity" value="Golf-Bowl " hidden>
+                                <img src="images/crazyboule.jpeg" alt="Golf-Bowl" class="activity-img">
+                                <div class="tick">✔</div>
+                                <span>Golf-Bowl? ⛳ </span>
+                            </label>
                         </div>
                     </div>
 
                     <div class="itinerary-category">
                         <h2 class="category-title">Quality Time</h2>
                         <div class="itinerary-grid">
-                            <label class="itinerary-item" data-place="The Shard, London">
-                                <input type="checkbox" name="activity" value="Movie Night" hidden>
-                                <img src="images/Movie.jpg" alt="Cinema" class="activity-img">
+                            <label class="itinerary-item" data-place="Old Royal Naval College, London">
+                                <input type="checkbox" name="activity" value="Painted Halls" hidden>
+                                <img src="images/heliospainting.jpeg" alt="Painted Halls" class="activity-img">
                                 <div class="tick">✔</div>
-                                <span>Movie Night 🎬</span>
+                                <span>Painted Halls 🏛️ </span>
                             </label>
 
-                            <label class="itinerary-item" data-place="The Shard, London">
-                                <input type="checkbox" name="activity" value="Stargazing" hidden>
-                                <img src="images/Stargazing.jpg" alt="Stargazing" class="activity-img">
+                            <label class="itinerary-item" data-place="Hampstead Heath, London">
+                                <input type="checkbox" name="activity" value="Relaxing Park" hidden>
+                                <img src="images/hampstead.jpeg" alt="Relaxing Park" class="activity-img">
                                 <div class="tick">✔</div>
-                                <span>Stargazing ✨</span>
+                                <span>Relaxing Park 🏞️</span>
+                            </label>
+
+                            <label class="itinerary-item" data-place="Royal Botanic Gardens, Kew">
+                                <input type="checkbox" name="activity" value="Kew Gardens" hidden>
+                                <img src="images/kewgardens.jpeg" alt="Kew Gardens" class="activity-img">
+                                <div class="tick">✔</div>
+                                <span>Kew's Orchids 🌺</span>
+                            </label>
+
+                            <label class="itinerary-item" data-place="Electric Cinema White City House, London">
+                                <input type="checkbox" name="activity" value="Classic Cinema" hidden>
+                                <img src="images/electriccinema.jpeg" alt="Classic Cinema" class="activity-img">
+                                <div class="tick">✔</div>
+                                <span>Classic Cinema 📽️</span>
                             </label>
 
                             <label class="itinerary-item" data-place="Stratford International, London">
@@ -102,6 +179,13 @@
                                 <img src="images/Homecooking.jpg" alt="Homecooking" class="activity-img">
                                 <div class="tick">✔</div>
                                 <span>Bf's cooking ❤️</span>
+                            </label>
+
+                            <label class="itinerary-item" data-place="Stratford International, London">
+                                <input type="checkbox" name="activity" value="Job Prep" hidden>
+                                <img src="images/jobprep.jpeg" alt="Job Prep" class="activity-img">
+                                <div class="tick">✔</div>
+                                <span>Job Prep w/ Bf ❤️</span>
                             </label>
                         </div>
                     </div>
