--- a/confirmation.html
+++ b/confirmation.html
@@ -13,7 +13,7 @@
         <h2>Your itinerary has been sent to your personal planner! 💌💖</h2>
     </section>
     <section class="confirmation-section">
-        <p>Your personal planner will endeavour to bring you the most magical Valentine's Day (& After)! 🥰✨</p>
+        <h3>Your personal planner will endeavour to bring you the most magical Valentine's Day (& After)! 🥰✨</h3>
         <p id="confirmationMessage"></p>
     </section>
     <section class="confirmation-section">
