--- a/confirmation.html
+++ b/confirmation.html
@@ -10,10 +10,10 @@
     <div id="confirmationPage" class="confirmation-box">
     <section class="confirmation-section">
         <img src="images/email-iconss.png" class="email-icon" alt="Email Icon">
-        <h2>Your itinerary has been sent to your personal planner! 💌💖</h2>
+        <h2>The selected itinerary has been sent to your personal planner! 💌💖</h2>
     </section>
     <section class="confirmation-section">
-        <h3>Your personal planner will endeavour to bring you the most magical Valentine's Day (& After)! 🥰✨</h3>
+        <h3>Your personal planner will endeavour to bring you the most magical Valentine's 🥰✨</h3>
         <p id="confirmationMessage"></p>
     </section>
     <section class="confirmation-section">
