--- a/confirmation.html
+++ b/confirmation.html
@@ -13,7 +13,7 @@
         <h2>The selected itinerary has been sent to your personal planner! 💌💖</h2>
     </section>
     <section class="confirmation-section">
-        <h3>Your personal planner will endeavour to bring you the most magical Valentine's 🥰✨</h3>
+        <h3>Your personal planner will endeavour to bring you the most magical Valentine's 🥰</h3>
         <p id="confirmationMessage"></p>
     </section>
     <section class="confirmation-section">
