--- a/confirmation.html
+++ b/confirmation.html
@@ -50,7 +50,7 @@
                 `;
 
                 // Send an email using EmailJS
-            sendConfirmationEmail(activityList);
+            //*sendConfirmationEmail(activityList);*// //*commenting out since link has already been shared *//
             } else {
                 confirmationMessage.textContent = "No activities were selected.";
             }
